Increase PermGen space for running tests.